[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
authors = ["Kelly Lynch"]
description = "Kelly's implementation of the Advent of Code 2023"
keywords = ["Advent of Code", "aoc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4", features = ["cargo", "string"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
thiserror = "1.0.50"
