[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
authors = ["Kelly Lynch"]
description = "Kelly's implementation of the Advent of Code 2023"
keywords = ["Advent of Code", "aoc"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "puzzlelib"
path = "src/puzzles/lib.rs"

[[bin]]
name = "aoc_2023"
path = "src/bin.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4", features = ["cargo", "string"] }
lazy_static = "1.4.0"
log = "0.4.20"
num = "0.4.1"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
thiserror = "1.0.50"
